crates/alder-parse/src/markup/snapshots/alder_parse__markup__directive__tests__directive_if_else.snap
---
source: crates/alder-parse/src/markup/directive.rs
description: "<div>@if a { <p>a</p> } @else { <p>b</p> }</div>"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 49,
        },
    },
    value: Markup(
        Element(
            Element {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 5,
                        },
                    },
                    value: Tag(
                        "div",
                    ),
                },
                attrs: [],
                children: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 6,
                            },
                            end: Position {
                                line: 1,
                                column: 43,
                            },
                        },
                        value: If {
                            branches: [
                                ChildIfBranch {
                                    condition: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 10,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 11,
                                            },
                                        },
                                        value: Var(
                                            "a",
                                        ),
                                    },
                                    body: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 12,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 24,
                                            },
                                        },
                                        value: ChildBlock {
                                            items: [
                                                Child(
                                                    Located {
                                                        region: Region {
                                                            start: Position {
                                                                line: 1,
                                                                column: 13,
                                                            },
                                                            end: Position {
                                                                line: 1,
                                                                column: 14,
                                                            },
                                                        },
                                                        value: Text(
                                                            " ",
                                                        ),
                                                    },
                                                ),
                                                Child(
                                                    Located {
                                                        region: Region {
                                                            start: Position {
                                                                line: 1,
                                                                column: 14,
                                                            },
                                                            end: Position {
                                                                line: 1,
                                                                column: 22,
                                                            },
                                                        },
                                                        value: Element(
                                                            Element {
                                                                name: Located {
                                                                    region: Region {
                                                                        start: Position {
                                                                            line: 1,
                                                                            column: 15,
                                                                        },
                                                                        end: Position {
                                                                            line: 1,
                                                                            column: 16,
                                                                        },
                                                                    },
                                                                    value: Tag(
                                                                        "p",
                                                                    ),
                                                                },
                                                                attrs: [],
                                                                children: [
                                                                    Located {
                                                                        region: Region {
                                                                            start: Position {
                                                                                line: 1,
                                                                                column: 17,
                                                                            },
                                                                            end: Position {
                                                                                line: 1,
                                                                                column: 18,
                                                                            },
                                                                        },
                                                                        value: Text(
                                                                            "a",
                                                                        ),
                                                                    },
                                                                ],
                                                                self_closing: false,
                                                            },
                                                        ),
                                                    },
                                                ),
                                                Child(
                                                    Located {
                                                        region: Region {
                                                            start: Position {
                                                                line: 1,
                                                                column: 22,
                                                            },
                                                            end: Position {
                                                                line: 1,
                                                                column: 23,
                                                            },
                                                        },
                                                        value: Text(
                                                            " ",
                                                        ),
                                                    },
                                                ),
                                            ],
                                        },
                                    },
                                },
                            ],
                            final_else: Some(
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 31,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 43,
                                        },
                                    },
                                    value: ChildBlock {
                                        items: [
                                            Child(
                                                Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 1,
                                                            column: 32,
                                                        },
                                                        end: Position {
                                                            line: 1,
                                                            column: 33,
                                                        },
                                                    },
                                                    value: Text(
                                                        " ",
                                                    ),
                                                },
                                            ),
                                            Child(
                                                Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 1,
                                                            column: 33,
                                                        },
                                                        end: Position {
                                                            line: 1,
                                                            column: 41,
                                                        },
                                                    },
                                                    value: Element(
                                                        Element {
                                                            name: Located {
                                                                region: Region {
                                                                    start: Position {
                                                                        line: 1,
                                                                        column: 34,
                                                                    },
                                                                    end: Position {
                                                                        line: 1,
                                                                        column: 35,
                                                                    },
                                                                },
                                                                value: Tag(
                                                                    "p",
                                                                ),
                                                            },
                                                            attrs: [],
                                                            children: [
                                                                Located {
                                                                    region: Region {
                                                                        start: Position {
                                                                            line: 1,
                                                                            column: 36,
                                                                        },
                                                                        end: Position {
                                                                            line: 1,
                                                                            column: 37,
                                                                        },
                                                                    },
                                                                    value: Text(
                                                                        "b",
                                                                    ),
                                                                },
                                                            ],
                                                            self_closing: false,
                                                        },
                                                    ),
                                                },
                                            ),
                                            Child(
                                                Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 1,
                                                            column: 41,
                                                        },
                                                        end: Position {
                                                            line: 1,
                                                            column: 42,
                                                        },
                                                    },
                                                    value: Text(
                                                        " ",
                                                    ),
                                                },
                                            ),
                                        ],
                                    },
                                },
                            ),
                        },
                    },
                ],
                self_closing: false,
            },
        ),
    ),
}
